Updated Images folder name

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <img src="images/MikePhoto.jpg" alt="Michael Profile Picture" height="240" width="160">
+  <img src="Images/MikePhoto.jpg" alt="Michael Profile Picture" height="240" width="160">
   <h1>Michael Lanni</h1>
   <p><em>Sr. Application Associate <strong><a href="https://autoclubsouth.aaa.com/">Auto Club Group</a></strong></em></p>
   <p>I am a application programmer that is working to renew his proficiency in coding, and nuture his budding passion of software development.</p>
